# applied-ai-backend-coding-challenge

./: .gitignore  README.md  docker-compose.yml  steps.txt
client/: app.py  communication.py  config.py  manage.py  models.py  publisher.py  requirements.txt
client/migrations/versions/: 4d9e9dd3feef_.py
client/templates/: translate.html
nginx/: family_recipes.conf
server/: CMakeLists.txt  Dockerfile  consumer.conf.json  consumer.cpp
server/bd/: CMakeCache.txt  Makefile  cmake_install.cmake  consumer
server/bd/libamqpcpp-prefix/src/libamqpcpp-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
server/bd/libamqpcpp-prefix/src/libamqpcpp-build/include/: Makefile  cmake_install.cmake
server/bd/libamqpcpp-prefix/src/libamqpcpp-build/src/: Makefile  cmake_install.cmake
server/bd/libamqpcpp-prefix/src/libamqpcpp-stamp/: download-libamqpcpp.cmake  extract-libamqpcpp.cmake  libamqpcpp-urlinfo.txt  verify-libamqpcpp.cmake
server/bd/libamqpcpp-prefix/tmp/: libamqpcpp-cfgcmd.txt
server/conf/: consumer.conf.json
server/inc/: json.hpp
server/src/: consumer.cpp
web/: Dockerfile  requirements.txt  run.py
web/instance/: db_create.py  flask.cfg
web/project/: __init__.py  communication.py  models.py
web/project/templates/: 403.html  404.html  410.html  layout.html  translate.html
web/project/tests/: receiver.py
web/project/translate/: forms.py  views.py
